tests/ui/issues/issue-23024.stderr
error[E0658]: the precise format of `Fn`-family traits' type parameters is subject to change
  --> $DIR/issue-23024.rs:8:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^ help: use parenthetical notation instead: `Fn() -> ()`
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0107]: missing generics for trait `Fn`
  --> $DIR/issue-23024.rs:8:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^ expected 1 generic argument
   |
help: add missing generic argument
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn<Args>)(3));
   |                                         ++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0658.
For more information about an error, try `rustc --explain E0107`.
